--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -5,9 +5,11 @@ one:
   descrip: MyString
   detail: MyString
   price: MyString
+  name: MyString
 
 two:
   unicode: MyString
   descrip: MyString
   detail: MyString
   price: MyString
+  name: MyString
