--- a/test/fixtures/tokens.yml
+++ b/test/fixtures/tokens.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  sell: one
-  item: one
-  price: 9.99
+  user: one
+  authentication: MyString
 
 two:
-  sell: two
-  item: two
-  price: 9.99
+  user: two
+  authentication: MyString
