--- a/test/fixtures/phones.yml
+++ b/test/fixtures/phones.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  number: MyString
-  client: one
+# one:
+#   number: MyString
+#   client: one
 
-two:
-  number: MyString
-  client: two
+# two:
+#   number: MyString
+#   client: two
