--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,15 +1,26 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+# one:
+#   unicode: MyString
+#   descrip: MyString
+#   detail: MyString
+#   price: MyString
+#   name: MyString
+
+# two:
+#   unicode: MyString
+#   descrip: MyString
+#   detail: MyString
+#   price: MyString
+#   name: MyString
 one:
-  unicode: MyString
+  unicode: QWE123456
   descrip: MyString
-  detail: MyString
-  price: MyString
-  name: MyString
+  detail: MyText
+  price: 1.5
 
 two:
-  unicode: MyString
+  unicode: QWE123457
   descrip: MyString
-  detail: MyString
-  price: MyString
-  name: MyString
+  detail: MyText
+  price: 1.5
