--- a/test/fixtures/types.yml
+++ b/test/fixtures/types.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  descrip: MyString
+# one:
+#   descrip: MyString
 
-two:
-  descrip: MyString
+# two:
+#   descrip: MyString
