--- a/test/fixtures/sells.yml
+++ b/test/fixtures/sells.yml
@@ -3,9 +3,14 @@
 one:
   client: one
   user: one
-  reservation: one
+  reservation: two
 
 two:
   client: two
   user: two
   reservation: two
+
+three:
+  client: two
+  user: one
+  reservation: one
