--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  username: matute
-  password: matute1242
+# one:
+#   username: matute
+#   password: matute1242
 
-two:
-  username: lolo
-  password: matute1242
+# two:
+#   username: lolo
+#   password: matute1242
